--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -88,6 +88,7 @@
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="Enums\ActivityType.cs" />
     <Compile Include="Enums\AuctionStatus.cs" />
+    <Compile Include="Enums\BidType.cs" />
     <Compile Include="Enums\Gender.cs" />
     <Compile Include="Enums\OrderStatus.cs" />
     <Compile Include="Enums\PaymentMethod.cs" />
