--- a/src/Mzayad.AutoBidNotifier/Mzayad.AutoBidNotifier.csproj
+++ b/src/Mzayad.AutoBidNotifier/Mzayad.AutoBidNotifier.csproj
@@ -89,16 +89,16 @@
       <HintPath>..\..\packages\OrangeJetpack.Base.Data.0.1.2\lib\net452\OrangeJetpack.Base.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="OrangeJetpack.Localization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\OrangeJetpack.Localization.1.5.7\lib\OrangeJetpack.Localization.dll</HintPath>
+    <Reference Include="OrangeJetpack.Localization, Version=1.7.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\OrangeJetpack.Localization.1.7.5\lib\net45\OrangeJetpack.Localization.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="OrangeJetpack.Services.Client, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\OrangeJetpack.Services.Client.0.0.41\lib\net452\OrangeJetpack.Services.Client.dll</HintPath>
+      <HintPath>..\..\packages\OrangeJetpack.Services.Client.0.0.43\lib\net452\OrangeJetpack.Services.Client.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="OrangeJetpack.Services.Models, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\OrangeJetpack.Services.Client.0.0.41\lib\net452\OrangeJetpack.Services.Models.dll</HintPath>
+      <HintPath>..\..\packages\OrangeJetpack.Services.Client.0.0.43\lib\net452\OrangeJetpack.Services.Models.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
