--- a/src/Mzayad.Web/Web.Release.config
+++ b/src/Mzayad.Web/Web.Release.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <!--<system.web>
+  <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <customErrors mode="On" defaultRedirect="/500.html" redirectMode="ResponseRewrite" xdt:Transform="Insert">
       <error statusCode="404" redirect="/404.html" />
@@ -20,5 +20,5 @@
     <modules>
       <add name="RaygunErrorModule" type="Mindscape.Raygun4Net.RaygunHttpModule" xdt:Transform="Insert" />
     </modules>
-  </system.webServer>-->
+  </system.webServer>
 </configuration>
