--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -5,7 +5,7 @@
     <section name="RaygunSettings" type="Mindscape.Raygun4Net.RaygunSettings, Mindscape.Raygun4Net" />
     <section name="glimpse" type="Glimpse.Core.Configuration.Section, Glimpse.Core" />
   </configSections>
-  <RaygunSettings apikey="gXc0djLmI5/xbw6e3UsK4w==" excludeErrorsFromLocal="true" />
+  <RaygunSettings apikey="TUFjnIZk6kY30S9fa57SQQ==" excludeHttpStatusCodes="404" excludeErrorsFromLocal="true" throwOnError="true" />
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Mzayad.mdf;Initial Catalog=Mzayad;Integrated Security=True" providerName="System.Data.SqlClient" />
     <!--<add name="DefaultConnection" connectionString="Server=tcp:nvq2uy65rq.database.windows.net,1433;Database=Mzayad;User ID=mzayad@nvq2uy65rq;Password=ycQoEa6MAdUT4UPKWXjZ;Trusted_Connection=False;Encrypt=True;Connection Timeout=30" providerName="System.Data.SqlClient" />-->
