--- a/src/Mzayad.WebJobs/packages.config
+++ b/src/Mzayad.WebJobs/packages.config
@@ -11,9 +11,11 @@
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net461" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net461" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
+  <package id="Mindscape.Raygun4Net" version="5.4.1" targetFramework="net461" />
+  <package id="Mindscape.Raygun4Net.Core" version="5.3.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="OrangeJetpack.Base.Data" version="0.1.2" targetFramework="net461" />
-  <package id="OrangeJetpack.Localization" version="1.5.7" targetFramework="net451" />
+  <package id="OrangeJetpack.Localization" version="1.7.5" targetFramework="net461" />
   <package id="System.Spatial" version="5.6.4" targetFramework="net461" />
   <package id="WindowsAzure.Storage" version="5.0.2" targetFramework="net461" />
 </packages>
