--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -407,6 +407,10 @@
     <Compile Include="Migrations\201701272210318_MessagesTable.Designer.cs">
       <DependentUpon>201701272210318_MessagesTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702121159427_Donothing.cs" />
+    <Compile Include="Migrations\201702121159427_Donothing.Designer.cs">
+      <DependentUpon>201702121159427_Donothing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -669,6 +673,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201701272210318_MessagesTable.resx">
       <DependentUpon>201701272210318_MessagesTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702121159427_Donothing.resx">
+      <DependentUpon>201702121159427_Donothing.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
