--- a/src/Mzayad.Core/Mzayad.Core.csproj
+++ b/src/Mzayad.Core/Mzayad.Core.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Exceptions\SubscriptionInvalidForPurchaseException.cs" />
     <Compile Include="Exceptions\UserNotHaveAvatarPrize.cs" />
     <Compile Include="Extensions\DateTimeExtensions.cs" />
+    <Compile Include="Extensions\ListExtensions.cs" />
     <Compile Include="Extensions\UriExtensions.cs" />
     <Compile Include="Formatting\CurrencyFormatter.cs" />
     <Compile Include="Formatting\DateTimeFormatter.cs" />
