MZ-269 added bid logging to queue service

--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -114,7 +114,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Activity\ActivityEventService.cs" />
-    <Compile Include="Activity\ActivityQueueService.cs" />
+    <Compile Include="Activity\QueueService.cs" />
     <Compile Include="AddressService.cs" />
     <Compile Include="AuctionService.cs" />
     <Compile Include="AutoBidService.cs" />
