--- a/src/Mzayad.WebJobs/Mzayad.WebJobs.csproj
+++ b/src/Mzayad.WebJobs/Mzayad.WebJobs.csproj
@@ -137,6 +137,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueueNameResolver.cs" />
+    <Compile Include="TrophyFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
