MZ-269 refactored bid streak checks

--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -144,6 +144,7 @@
     <Compile Include="TokenService.cs" />
     <Compile Include="Identity\UserManager.cs" />
     <Compile Include="Trophies\CompleteProfileTrophyEngine.cs" />
+    <Compile Include="Trophies\ITrophyEngine.cs" />
     <Compile Include="Trophies\WinAuctionTrophyEngine.cs" />
     <Compile Include="Trophies\AutoBidTrophyEngine.cs" />
     <Compile Include="Trophies\TrophyEngine.cs" />
