--- a/src/Mzayad.WebJobs/Mzayad.WebJobs.csproj
+++ b/src/Mzayad.WebJobs/Mzayad.WebJobs.csproj
@@ -138,7 +138,7 @@
     <Compile Include="Functions\FunctionsBase.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QueueNameResolver.cs" />
+    <Compile Include="Configuration\QueueNameResolver.cs" />
     <Compile Include="Functions\TrophyFunctions.cs" />
   </ItemGroup>
   <ItemGroup>
