moved bid logic into stored procs

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -403,6 +403,10 @@
     <Compile Include="Migrations\201702121232504_AddFriendsAndMessages.Designer.cs">
       <DependentUpon>201702121232504_AddFriendsAndMessages.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703121052413_CreateBidStoredProcs.cs" />
+    <Compile Include="Migrations\201703121052413_CreateBidStoredProcs.Designer.cs">
+      <DependentUpon>201703121052413_CreateBidStoredProcs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -662,6 +666,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702121232504_AddFriendsAndMessages.resx">
       <DependentUpon>201702121232504_AddFriendsAndMessages.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703121052413_CreateBidStoredProcs.resx">
+      <DependentUpon>201703121052413_CreateBidStoredProcs.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
