MZ-277 add new API.

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -394,6 +394,7 @@
     <Compile Include="Areas\Api\Controllers\AvatarsController.cs" />
     <Compile Include="Areas\Api\Controllers\OrdersController.cs" />
     <Compile Include="Areas\Api\Controllers\PaymentController.cs" />
+    <Compile Include="Areas\Api\Controllers\PrizesController.cs" />
     <Compile Include="Areas\Api\Controllers\ProductsController.cs" />
     <Compile Include="Areas\Api\Controllers\SubscriptionsController.cs" />
     <Compile Include="Areas\Api\Controllers\UsersController.cs" />
@@ -402,9 +403,14 @@
     <Compile Include="Areas\Api\ErrorHandling\ApiErrorType.cs" />
     <Compile Include="Areas\Api\Filters\LanguageFilter.cs" />
     <Compile Include="Areas\Api\Models\Auctions\AuctionModel.cs" />
+    <Compile Include="Areas\Api\Models\Orders\KnetTransactionModel.cs" />
     <Compile Include="Areas\Api\Models\Orders\OrderCreateResult.cs" />
+    <Compile Include="Areas\Api\Models\Orders\OrderDetailModel.cs" />
+    <Compile Include="Areas\Api\Models\Orders\OrderItemModel.cs" />
     <Compile Include="Areas\Api\Models\Orders\OrderModel.cs" />
     <Compile Include="Areas\Api\Models\Payment\PaymentViewModel.cs" />
+    <Compile Include="Areas\Api\Models\Prizes\AvatarViewModel.cs" />
+    <Compile Include="Areas\Api\Models\Prizes\PrizeViewModel.cs" />
     <Compile Include="Areas\Api\Models\Products\ProductModel.cs" />
     <Compile Include="Areas\Api\Models\Subscriptions\BuySbscriptionResultViewModel.cs" />
     <Compile Include="Areas\Api\Models\Subscriptions\SubscriptionViewModel.cs" />
