--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -113,6 +113,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BannerService.cs" />
     <Compile Include="Queues\ActivityEventService.cs" />
     <Compile Include="Queues\IQueueService.cs" />
     <Compile Include="Queues\QueueService.cs" />
