MZ-290 added missing file to csproj

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -854,6 +854,7 @@
     <Content Include="Views\User\UserProfile.cshtml" />
     <Content Include="Views\User\Friends.cshtml" />
     <Content Include="Views\User\Inbox.cshtml" />
+    <Content Include="Views\User\BuyPremiumAvatar.cshtml" />
     <TypeScriptCompile Include="Scripts\auctions.ts" />
     <TypeScriptCompile Include="Scripts\site.ts" />
     <Content Include="Scripts\wow.js" />
