--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -77,7 +77,7 @@
   </location>
   <!-- ReSharper restore WebConfig.WebConfigPathWarning -->
   <system.webServer>
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication" />
       <add name="Glimpse" type="Glimpse.AspNet.HttpModule, Glimpse.AspNet" preCondition="integratedMode" />
     </modules>
