MZ-295 search for friend result page.

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -859,7 +859,7 @@
     <Content Include="Views\User\Friends.cshtml" />
     <Content Include="Views\User\Inbox.cshtml" />
     <Content Include="Views\User\BuyPremiumAvatar.cshtml" />
-    <Content Include="Views\Shared\DisplayTemplates\UserProfileViewModel.cshtml" />
+    <Content Include="Views\Shared\_layout_friends.cshtml" />
     <TypeScriptCompile Include="Scripts\auctions.ts" />
     <TypeScriptCompile Include="Scripts\site.ts" />
     <Content Include="Scripts\wow.js" />
