MZ-303 update product quantity tracking.

--- a/src/Mzayad.Core/Mzayad.Core.csproj
+++ b/src/Mzayad.Core/Mzayad.Core.csproj
@@ -32,6 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Exceptions\InsufficientQuantity.cs" />
     <Compile Include="Exceptions\InsufficientTokensException.cs" />
     <Compile Include="Exceptions\SubscriptionCannotBePurchasesWithTokensException.cs" />
     <Compile Include="Exceptions\SubscriptionInvalidForPurchaseException.cs" />
