--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -411,6 +411,10 @@
     <Compile Include="Migrations\201703231232011_AddBanner.Designer.cs">
       <DependentUpon>201703231232011_AddBanner.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704090816372_AddOrderAuction.cs" />
+    <Compile Include="Migrations\201704090816372_AddOrderAuction.Designer.cs">
+      <DependentUpon>201704090816372_AddOrderAuction.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -676,6 +680,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703231232011_AddBanner.resx">
       <DependentUpon>201703231232011_AddBanner.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704090816372_AddOrderAuction.resx">
+      <DependentUpon>201704090816372_AddOrderAuction.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
