--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -732,6 +732,7 @@
     <Content Include="Areas\Admin\Views\PageManagement\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Auctions\AutoBids.cshtml" />
     <Content Include="Areas\Admin\Views\Avatars\Edit.cshtml" />
+    <Content Include="Scripts\hammer.js" />
     <Content Include="Scripts\Winwheel.js" />
     <Content Include="Scripts\zoom\jquery.elevatezoom.js" />
     <Content Include="Views\Shared\_ImageUpload.cshtml" />
