added Set-GitAppVersion.ps1; added force redirect to https

--- a/src/Mzayad.Web/Web.Release.config
+++ b/src/Mzayad.Web/Web.Release.config
@@ -17,5 +17,17 @@
     <modules>
       <add name="RaygunErrorModule" type="Mindscape.Raygun4Net.RaygunHttpModule" xdt:Transform="Insert" />
     </modules>
+    <rewrite>
+      <rules>
+        <clear />
+        <rule name="Redirect to https" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}{REQUEST_URI}" redirectType="Permanent" appendQueryString="false" />
+        </rule>
+      </rules>
+    </rewrite>
   </system.webServer>
 </configuration>
