replaced raygun with elmah

--- a/src/Mzayad.Web/Web.Release.config
+++ b/src/Mzayad.Web/Web.Release.config
@@ -3,9 +3,6 @@
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <customErrors mode="On" xdt:Transform="Replace" />
-    <httpModules>
-      <add name="RaygunErrorModule" type="Mindscape.Raygun4Net.RaygunHttpModule" xdt:Transform="Insert" />
-    </httpModules>
   </system.web>
   <system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace" xdt:Transform="Insert">
@@ -14,9 +11,6 @@
       <remove statusCode="500"/>
       <error statusCode="500" path="500.html" responseMode="File"/>
     </httpErrors>
-    <modules>
-      <add name="RaygunErrorModule" type="Mindscape.Raygun4Net.RaygunHttpModule" xdt:Transform="Insert" />
-    </modules>
     <rewrite>
       <rules>
         <clear />
@@ -30,4 +24,7 @@
       </rules>
     </rewrite>
   </system.webServer>
+  <elmah>
+    <errorLog type="Elmah.Io.ErrorLog, Elmah.Io" LogId="532a28ab-7f8e-4dc7-81b4-9bdfca175538" xdt:Transform="Insert" />
+  </elmah>
 </configuration>
