--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -7,6 +7,10 @@
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
   <package id="ckeditor.TypeScript.DefinitelyTyped" version="0.9.5" targetFramework="net461" />
+  <package id="elmah.corelibrary" version="1.2.2" targetFramework="net461" />
+  <package id="elmah.io" version="2.0.29" targetFramework="net461" />
+  <package id="elmah.io.client" version="2.0.29" targetFramework="net461" />
+  <package id="elmah.io.core" version="2.0.29" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EPPlus" version="4.0.5" targetFramework="net461" />
   <package id="FontAwesome" version="4.2.0" targetFramework="net451" />
@@ -57,8 +61,6 @@
   <package id="Microsoft.TypeScript.MSBuild" version="1.8.11" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net461" />
-  <package id="Mindscape.Raygun4Net.Core" version="5.3.1" targetFramework="net461" />
-  <package id="Mindscape.Raygun4Net.Mvc" version="5.3.1" targetFramework="net461" />
   <package id="Moment.js" version="2.10.2" targetFramework="net451" />
   <package id="moment.TypeScript.DefinitelyTyped" version="1.1.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
