add gmail email sender.

--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -30,8 +30,9 @@
     <add key="SiteName" value="Mazadaty" />
     <add key="LocalShipping" value="1" />
     <add key="CanonicalUrl" value="http://localhost:15189/" />
-    <add key="FromEmail" value="samercs1983@gmail.com"/>
-    <add key="FromName" value="مزاداتي | Mazadaty"/>
+    <add key="FromEmail" value="samercs1983@gmail.com" />
+    <add key="FromName" value="مزاداتي | Mazadaty" />
+    <add key="EmailPassword" value="--yourpassword--" />
   </appSettings>
   <system.web>
     <anonymousIdentification enabled="true" />
