--- a/src/Mzayad.Services/packages.config
+++ b/src/Mzayad.Services/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="MailKit" version="1.18.1.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net461" />
@@ -9,6 +11,7 @@
   <package id="Microsoft.Data.OData" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.Data.Services.Client" version="5.6.4" targetFramework="net451" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.1.0" targetFramework="net451" />
+  <package id="MimeKit" version="1.18.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="OrangeJetpack.Base.Core" version="0.0.27" targetFramework="net461" />
   <package id="OrangeJetpack.Base.Data" version="0.1.2" targetFramework="net461" />
