--- a/src/Mzayad.Web/packages.config
+++ b/src/Mzayad.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.SignalR" version="3.0.2" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.5" targetFramework="net451" />
+  <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
   <package id="ckeditor.TypeScript.DefinitelyTyped" version="0.9.5" targetFramework="net461" />
   <package id="elmah.corelibrary" version="1.2.2" targetFramework="net461" />
   <package id="elmah.io" version="2.0.29" targetFramework="net461" />
@@ -26,6 +27,7 @@
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net451" />
   <package id="knockout.TypeScript.DefinitelyTyped" version="0.8.2" targetFramework="net451" />
   <package id="knockoutjs" version="3.3.0" targetFramework="net451" />
+  <package id="MailKit" version="1.18.1.1" targetFramework="net461" />
   <package id="MarkdownSharp" version="1.13.0.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Cors" version="5.2.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
@@ -61,6 +63,7 @@
   <package id="Microsoft.TypeScript.MSBuild" version="1.8.11" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.11" targetFramework="net461" />
+  <package id="MimeKit" version="1.18.1" targetFramework="net461" />
   <package id="Moment.js" version="2.10.2" targetFramework="net451" />
   <package id="moment.TypeScript.DefinitelyTyped" version="1.1.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
