--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Messaging\EmailSettings.cs" />
     <Compile Include="Messaging\IMessageService.cs" />
     <Compile Include="Messaging\EmailMessageService.cs" />
+    <Compile Include="PageService.cs" />
     <Compile Include="Queues\ActivityEventService.cs" />
     <Compile Include="Queues\IQueueService.cs" />
     <Compile Include="Queues\QueueService.cs" />
