--- a/src/Mazadaty.Services/Mazadaty.Services.csproj
+++ b/src/Mazadaty.Services/Mazadaty.Services.csproj
@@ -44,6 +44,12 @@
       <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="ImageResizer, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ImageResizer.4.1.10\lib\net45\ImageResizer.dll</HintPath>
+    </Reference>
+    <Reference Include="ImageResizer.Plugins.Watermark, Version=4.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\ImageResizer.Plugins.Watermark.4.1.10\lib\net45\ImageResizer.Plugins.Watermark.dll</HintPath>
+    </Reference>
     <Reference Include="MailKit, Version=1.18.0.0, Culture=neutral, PublicKeyToken=4e064fe7c44a8f1b, processorArchitecture=MSIL">
       <HintPath>..\..\packages\MailKit.1.18.1.1\lib\net451\MailKit.dll</HintPath>
     </Reference>
@@ -111,6 +117,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Data.Linq" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.AspNet.WebApi.Client.5.2.3\lib\net45\System.Net.Http.Formatting.dll</HintPath>
@@ -159,6 +166,10 @@
     <Compile Include="SpecificationService.cs" />
     <Compile Include="SplashAdService.cs" />
     <Compile Include="SponsorService.cs" />
+    <Compile Include="Storage\Enum\ImageFormat.cs" />
+    <Compile Include="Storage\ImageSettings.cs" />
+    <Compile Include="Storage\IStorageService.cs" />
+    <Compile Include="Storage\LocalStorageService.cs" />
     <Compile Include="SubscriptionService.cs" />
     <Compile Include="TokenService.cs" />
     <Compile Include="Identity\UserManager.cs" />
