--- a/src/Mazadaty.Services/packages.config
+++ b/src/Mazadaty.Services/packages.config
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="ImageResizer" version="4.1.10" targetFramework="net461" />
+  <package id="ImageResizer.Plugins.Watermark" version="4.1.10" targetFramework="net461" />
   <package id="MailKit" version="1.18.1.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net461" />
